# irsim-py

./: .gitignore  README.md  irsim.py  irsim.spec  pyproject.toml  requirements.txt  resources_rc.py  ui_mainwindow.py
.github/workflows/: ci.yml
