[project]
name = "irsim-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyinstaller>=6.16.0", "pyqt5>=5.15.11"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
